# personal-spendings

./: .gitignore  README.md  activate.sh  init.sh  pyproject.toml  requirements.txt
from_drive_to_xlsx/: main.py  spreadsheets.py
from_drive_to_xlsx/config/: config.ini  config.py
