[tool.poetry]
name = "personal-spendings"
version = "0.1.0"
description = ""
authors = ["Vinh Pham-Gia <vinhpg45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
gsheets = "^0.6.1"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
